2011-09-05  Pedro Alves  <pedro@codesourcery.com>

PR cli/13110

	* infrun.c (fetch_inferior_event): Check if there's a selected
	thread before checking if the selected thread is executing.